# DohodaProvedeniPrace

./: CMakeLists.txt  LICENSE  PreLoad.cmake  README.md  main.c  qrcode.c  ssps_dohoda.c
.github/workflows/: build.yaml
cli/: main.c
gui/: convert.py  dohodaprovedeniprace.ui  dohodaprovedeniprace.ui.h  main.c  main_gui.c
include/: hpdf_ttf_mem.h  liberationsans.h  qrcode.h  ssps_dohoda.h
tests/: CMakeLists.txt  md5.h  test-hash-2.c  test-hash.c  test-pdf-velke.c  test-pdf.c  test-razeni.c  test-size.c  test-velikost.c  toml.h
tests/include/: md5.h  toml_stdin.h
toml/: sample_dohoda.toml  sample_dohoda_17.toml
